# doc-parser

./: .dockerignore  Dockerfile  Dockerfile-gradio  README.md  pyproject.toml
mineru-api/: Dockerfile  README.md  app.py  docker-compose.yml
src/: .env.example  app.py  main.py
src/markitdown_parse/: main.py
src/pandoc_convert/: main.py
src/qwen_vl_parse/: main.py
src/utils/: config.py  utils.py
